tests/paczka1/small_fuzzy/87938524.err
Error in line 3: eUSsaq3sM A624 16,7
Error in line 10: IGtMBkTRJ0 S731 87,7
